# compio

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_Dev  README.md  compio.h  main.c  vcpkg.json
archivers/: squash_adapter.c  zlib_adapter.c
docs/: api_usage.md  architecture.md
examples/: example_usage.c
include/: allocator.hpp  block.h  btree.h  btree.hpp  compio_file.hpp  compression.h  file.hpp  shared_node.hpp  storage.h  utils.hpp
src/: allocator.cpp  block.c  btree.c  btree.cpp  compio.c  compio.cpp  compression.c  compressor.c  file.cpp  storage.c  utils.cpp  сompio.c
tests/: CMakeLists.txt  test_runner.c
tests/unit/: test_block.c  test_btree.c
